# catalog/pkg/openapi/model_asset_source_preview_response.go
@@ -1,0 +1,229 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the AssetSourcePreviewResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &AssetSourcePreviewResponse{}
+
+// AssetSourcePreviewResponse Response containing assets and their inclusion/exclusion status.
+type AssetSourcePreviewResponse struct {
+	// Token to use to retrieve next page of results.
+	NextPageToken string `json:"nextPageToken"`
+	// Maximum number of resources to return in the result.
+	PageSize int32 `json:"pageSize"`
+	// Number of items in result list.
+	Size int32 `json:"size"`
+	// Array of asset preview results.
+	Items   []AssetPreviewResult                   `json:"items"`
+	Summary AssetSourcePreviewResponseAllOfSummary `json:"summary"`
+}
+
+type _AssetSourcePreviewResponse AssetSourcePreviewResponse
+
+// NewAssetSourcePreviewResponse instantiates a new AssetSourcePreviewResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAssetSourcePreviewResponse(nextPageToken string, pageSize int32, size int32, items []AssetPreviewResult, summary AssetSourcePreviewResponseAllOfSummary) *AssetSourcePreviewResponse {
+	this := AssetSourcePreviewResponse{}
+	this.NextPageToken = nextPageToken
+	this.PageSize = pageSize
+	this.Size = size
+	this.Items = items
+	this.Summary = summary
+	return &this
+}
+
+// NewAssetSourcePreviewResponseWithDefaults instantiates a new AssetSourcePreviewResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAssetSourcePreviewResponseWithDefaults() *AssetSourcePreviewResponse {
+	this := AssetSourcePreviewResponse{}
+	return &this
+}
+
+// GetNextPageToken returns the NextPageToken field value
+func (o *AssetSourcePreviewResponse) GetNextPageToken() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.NextPageToken
+}
+
+// GetNextPageTokenOk returns a tuple with the NextPageToken field value
+// and a boolean to check if the value has been set.
+func (o *AssetSourcePreviewResponse) GetNextPageTokenOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.NextPageToken, true
+}
+
+// SetNextPageToken sets field value
+func (o *AssetSourcePreviewResponse) SetNextPageToken(v string) {
+	o.NextPageToken = v
+}
+
+// GetPageSize returns the PageSize field value
+func (o *AssetSourcePreviewResponse) GetPageSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.PageSize
+}
+
+// GetPageSizeOk returns a tuple with the PageSize field value
+// and a boolean to check if the value has been set.
+func (o *AssetSourcePreviewResponse) GetPageSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.PageSize, true
+}
+
+// SetPageSize sets field value
+func (o *AssetSourcePreviewResponse) SetPageSize(v int32) {
+	o.PageSize = v
+}
+
+// GetSize returns the Size field value
+func (o *AssetSourcePreviewResponse) GetSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value
+// and a boolean to check if the value has been set.
+func (o *AssetSourcePreviewResponse) GetSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Size, true
+}
+
+// SetSize sets field value
+func (o *AssetSourcePreviewResponse) SetSize(v int32) {
+	o.Size = v
+}
+
+// GetItems returns the Items field value
+func (o *AssetSourcePreviewResponse) GetItems() []AssetPreviewResult {
+	if o == nil {
+		var ret []AssetPreviewResult
+		return ret
+	}
+
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value
+// and a boolean to check if the value has been set.
+func (o *AssetSourcePreviewResponse) GetItemsOk() ([]AssetPreviewResult, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// SetItems sets field value
+func (o *AssetSourcePreviewResponse) SetItems(v []AssetPreviewResult) {
+	o.Items = v
+}
+
+// GetSummary returns the Summary field value
+func (o *AssetSourcePreviewResponse) GetSummary() AssetSourcePreviewResponseAllOfSummary {
+	if o == nil {
+		var ret AssetSourcePreviewResponseAllOfSummary
+		return ret
+	}
+
+	return o.Summary
+}
+
+// GetSummaryOk returns a tuple with the Summary field value
+// and a boolean to check if the value has been set.
+func (o *AssetSourcePreviewResponse) GetSummaryOk() (*AssetSourcePreviewResponseAllOfSummary, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Summary, true
+}
+
+// SetSummary sets field value
+func (o *AssetSourcePreviewResponse) SetSummary(v AssetSourcePreviewResponseAllOfSummary) {
+	o.Summary = v
+}
+
+func (o AssetSourcePreviewResponse) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o AssetSourcePreviewResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["nextPageToken"] = o.NextPageToken
+	toSerialize["pageSize"] = o.PageSize
+	toSerialize["size"] = o.Size
+	toSerialize["items"] = o.Items
+	toSerialize["summary"] = o.Summary
+	return toSerialize, nil
+}
+
+type NullableAssetSourcePreviewResponse struct {
+	value *AssetSourcePreviewResponse
+	isSet bool
+}
+
+func (v NullableAssetSourcePreviewResponse) Get() *AssetSourcePreviewResponse {
+	return v.value
+}
+
+func (v *NullableAssetSourcePreviewResponse) Set(val *AssetSourcePreviewResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAssetSourcePreviewResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAssetSourcePreviewResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAssetSourcePreviewResponse(val *AssetSourcePreviewResponse) *NullableAssetSourcePreviewResponse {
+	return &NullableAssetSourcePreviewResponse{value: val, isSet: true}
+}
+
+func (v NullableAssetSourcePreviewResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAssetSourcePreviewResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
